# weather_forecast

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
src/: manage.py
src/apps/weather/: forms.py  models.py  urls.py  views.py
src/apps/weather/api/: api_urls.py  api_views.py
src/apps/weather/enums/: weather_codes.py
src/apps/weather/migrations/: 0001_initial.py
src/apps/weather/services/: history_service.py  weather_service.py
src/conf/: urls.py
src/settings/: base.py  test.py
src/templates/: base.html
src/templates/weather/: about.html  about_api.html  history.html  index.html
src/tests/: conftest.py
src/tests/test_apps/weather/: conftest.py  test_api.py  test_models.py  test_services.py  test_views.py
